Use Integer.valueOf() instead of new Integer()
git-svn-id: https://svn.apache.org/repos/asf/maven/doxia/doxia/trunk@1439111 13f79535-47bb-0310-9956-ffa450edef68